--- a/http-handler/serverless.yml
+++ b/http-handler/serverless.yml
@@ -12,9 +12,13 @@
 # Happy Coding!
 
 service: http-handler
-# app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
+plugins:
+ - serverless-apigw-binary
+
+custom:
+  apigwBinary:
+    types:           
+      - 'image/jpeg'      
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
@@ -61,13 +65,15 @@ provider:
 functions:
   upload:
     handler: handler.upload
+    role: aaa
+
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
+  events:
+    - http:
+        path: images
+        method: post
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
