--- a/http-handler/serverless.yml
+++ b/http-handler/serverless.yml
@@ -65,15 +65,15 @@ provider:
 functions:
   upload:
     handler: handler.upload
-    role: aaa
+    role: arn:aws:iam::316649820111:role/lambda-http-handler
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
-  events:
-    - http:
-        path: images
-        method: post
+    events:
+      - http:
+          path: images
+          method: post
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
