--- a/http-handler/package.json
+++ b/http-handler/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "aws-sdk": "^2.759.0",
-    "serverless-apigw-binary": "^0.4.4"
+    "serverless": "^2.3.0",
+    "serverless-apigw-binary": "^0.4.4",
+    "serverless-offline": "^6.8.0"
   },
   "dependencies": {
     "uuid": "^8.3.0"
