--- a/filter-handler/serverless.yml
+++ b/filter-handler/serverless.yml
@@ -3,11 +3,11 @@ service: filter-handler
 provider:
   name: aws
   runtime: nodejs12.x
-  region: sa-east-1
+  region: us-east-1
 
 functions:
   filter:
     handler: handler.filter
     role: arn:aws:iam::316649820111:role/lambda-sqs-s3
     events:
-      - sns: arn:aws:sns:sa-east-1:316649820111:s3-nanoservices-imagens-put-topic
+      - sns: arn:aws:sns:us-east-1:316649820111:s3-nanoservices-imagens-put-topic
