--- a/image-tagging-filter/package.json
+++ b/image-tagging-filter/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "aws-sdk": "^2.768.0"
+    "aws-sdk": "^2.768.0",
+    "serverless": "^2.5.0"
   }
 }
